--- a/overrides/partials/comments.html
+++ b/overrides/partials/comments.html
@@ -2,7 +2,7 @@
   <h2 id="__comments">{{ lang.t("meta.comments") }}</h2>
   <!-- Insert generated snippet here -->
 <script src="https://giscus.app/client.js"
-        data-repo="salehin90/webkesht"
+        data-repo="salehin90/webkesht_docs_fa"
         data-repo-id="R_kgDOPlUUxQ"
         data-category="General"
         data-category-id="DIC_kwDOPlUUxc4Cuq9i"
