--- a/docs/stylesheets/MyStyle.css
+++ b/docs/stylesheets/MyStyle.css
@@ -381,13 +381,13 @@
         }
 
          /* لینک‌ها */
-        a {
+        .content a {
             color: #3498db;
             text-decoration: none;
             transition: color 0.3s ease;
         }
 
-        a:hover {
+        .content a:hover {
             color: #2980b9;
         }
         
@@ -408,6 +408,9 @@
             margin: 35px 0;
             border-radius: 2px;
         }
+
+
+
 
         @media (max-width: 768px) {
             body {
